--- a/apps/web/reset.html
+++ b/apps/web/reset.html
@@ -59,6 +59,10 @@
           </div>
         </section>
       </main>
+
+      <footer class="footer">
+        &copy; Lakeside La Torre (Murcia) Group SL  CIF:B70822366. Developed and Designed by John McBride.
+      </footer>
     </div>
 
     <script src="translations.js"></script>
