Polish Deputy-style UI and suppress empty selfie fetches

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600;9..144,700&family=Space+Grotesk:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link
@@ -15,7 +15,7 @@
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
       crossorigin=""
     />
-    <link rel="stylesheet" href="styles.css?v=20260127" />
+    <link rel="stylesheet" href="styles.css?v=20260128" />
   </head>
   <body>
     <div class="page">
@@ -1154,11 +1154,11 @@
       </div>
     </div>
 
-    <script src="translations.js?v=20260127"></script>
+    <script src="translations.js?v=20260128"></script>
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       crossorigin=""
     ></script>
-    <script src="app.js?v=20260127"></script>
+    <script src="app.js?v=20260128"></script>
   </body>
 </html>
