--- a/apps/web/reset.html
+++ b/apps/web/reset.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600;9..144,700&family=Space+Grotesk:wght@400;500;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css?v=20260127" />
+    <link rel="stylesheet" href="styles.css?v=20260128" />
   </head>
   <body>
     <div class="page">
@@ -65,7 +65,7 @@
       </footer>
     </div>
 
-    <script src="translations.js?v=20260127"></script>
-    <script src="reset.js?v=20260127"></script>
+    <script src="translations.js?v=20260128"></script>
+    <script src="reset.js?v=20260128"></script>
   </body>
 </html>
