--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -86,22 +86,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="referrer" content="strict-origin-when-cross-origin" />
 
-    <!-- CRITICAL: Unregister service worker BEFORE anything loads -->
-    <script>
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker
-          .getRegistrations()
-          .then(function (registrations) {
-            for (let registration of registrations) {
-              registration.unregister();
-              console.log(
-                "🗑️ Force-unregistered service worker:",
-                registration.scope,
-              );
-            }
-          });
-      }
-    </script>
+    <!-- Cache busting - forces browser to reload -->
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <meta name="version" content="3.1.0-20260202-1900" />
+    <!-- OneSignal Web SDK -->
+    <script
+      src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js"
+      defer
+    ></script>
   </head>
   <body>
     <div id="root"></div>
