fix: disable OneSignal SDK and fix PWA manifest icons

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -94,11 +94,13 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <meta name="version" content="5.0.0-20260203-0129" />
-    <!-- OneSignal Web SDK -->
+    <!-- OneSignal Web SDK - DISABLED (CDN failing, blocking login) -->
+    <!--
     <script
       src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js"
       defer
     ></script>
+    -->
   </head>
   <body>
     <div id="root"></div>
